[package]
name = "imgdock"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1.68"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
mongodb = "3"
fred = { version = "9", features = ["enable-native-tls"] }
dotenvy = "0.15"
rand = "0.8"
urlencoding = "2.1"
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
